--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -14,7 +14,7 @@
     <header>
       <h1>White Water Rafting Site Plan</h1>
       <h2>TayLynn Harman</h2>
-      <h2>WDD 130-[section??]</h2>
+      <h2>WDD 130</h2>
       <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
     </header>
     <main>
