--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
     <h1>Welcome to WDD130 Web Projects</h1>
     <nav>
       <a href="aboutme/index.html">About Me Page</a>
-      <a href="wwr/index.html">White Water Rafting Website</a>
-      <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+      <br />
+      <a href="#">White Water Rafting Website</a>
+      <br />
+      <a href="w02/site-plan-rafting.html">White Water Rafting Siteplan</a>
+      <br />
       <a href="positioning.html">Positioning Activity</a>
+      <br />
+      <a href="w03_dryoarboating/index.html">Dry Oar Boating</a>
+      <br />
       <a href="#">Personal Website</a>
+      <br />
       <a href="#">Personal Siteplan</a>
     </nav>
   </body>
