--- a/practice/csspractice.html
+++ b/practice/csspractice.html
@@ -1,5 +1,20 @@
 <!DOCTYPE html>
 <html>
+  <style>
+    nav, footer {
+    background-color: steelblue;
+    color: white;
+    padding: 10px;
+}
+footer p {
+    font-size: 20px;
+    margin: 20px auto;
+}
+a:hover {
+    background-color: white;
+    color: steelblue;
+}
+  </style>
   <head>
     <title>BYUI</title>
     <link rel="stylesheet" href="styles/styles.css" />
@@ -7,21 +22,22 @@
   <body>
     <header>
       <nav>
-        <a href="byui.html">Home</a>
-        <a href="https://www.churchofjesuschrist.org">Church of Jesus Christ</a>
-        <a href="https://www.churchofjesuschrist.org/temples">Temples</a>
-        <a href="https://www.churchofjesuschrist.org/study/scriptures"
+        <a font-size: 1.5em; href="byui.html">Home</a>
+        <a font-size: 1.5em; href="https://www.churchofjesuschrist.org">Church of Jesus Christ</a>
+        <a font-size: 1.5em; href="https://www.churchofjesuschrist.org/temples">Temples</a>
+        <a font-size: 1.5em; href="https://www.churchofjesuschrist.org/study/scriptures"
           >Scriptures</a
         >
       </nav>
     </header>
     <main>
       <h1>Brigham Young University Idaho</h1>
-      <img
-        src="https://www.byui.edu/images/service-sites/map-banner.jpg"
-        alt="BYUI Campus"
-      />
-      <p>
+      <img 
+      src="https://www.byui.edu/images/service-sites/map-banner.jpg" alt="BYUI
+      Campus" img
+        width: 30%;
+     />
+      <p width: 80%;>
         BYU-Idaho is a comfortable place to learn and grow as a disciple of
         Jesus Christ because students, faculty, and employees share a commitment
         to live the gospel.
