--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Welcome to WDD130 Web Projects</h1>
     <nav>
       <a href="aboutme/index.html">About Me Page</a>
-      <a href="dryoar/index.html">Dry Oar Boating Website</a>
+      <a href="rafting/index.html">Dry Oar Boating Website</a>
       <a href="w02/site-plan-rafting.html">White Water Rafting Siteplan</a>
       <a href="positioning.html">Positioning Activity</a>
       <a href="#">Personal Website</a>
