--- a/w02/site-plan-rafting.html
+++ b/w02/site-plan-rafting.html
@@ -72,11 +72,11 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: Felix Titling
+        Heading Font: COPPERPLATE
         <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: Dubai Light
+        Paragraph Font: Candara
         <!-- change this -->
       </h4>
       <h3>Normal paragraph example</h3>
