--- a/rafting/index.html
+++ b/rafting/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="content">
       <header>
-        <a id="logo-link" href="index.html">
+        <a id="logo_link" href="index.html">
           <img class="logo" src="images/logo.png" alt="Dry Oar Logo" />
         </a>
         <nav>
