--- a/tetonpartyco/site-plan.html
+++ b/tetonpartyco/site-plan.html
@@ -82,7 +82,7 @@
       <nav>
         <a href="#">Home</a>
         <a href="#">Projects</a>
-        <a href="#">Pricing</a>
+        <a href="#">FAQ</a>
       </nav>
       <hr>
       <h2>
@@ -96,7 +96,7 @@
           Projects 
         </div>
         <div class="sm-page3">
-          Pricing  
+          FAQ 
         </div>
 
         <div class="top">
@@ -118,11 +118,11 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Welcome to Teton Party Co! Let's plan a party!
       </p>
       <p>Images for the Home page</p>
         <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="tetonpartyco/image.jpg" alt="Kay owner of Teton Party Co.">
 
       </ul>
       <h3>[Page 2]</h3>
