--- a/w02/site-plan-rafting.html
+++ b/w02/site-plan-rafting.html
@@ -62,7 +62,7 @@
           <td class="primary">#F4FFFD</td>
           <td class="secondary">#4E878C</td>
           <td class="accent1">#EB5E28</td>
-          <td class="accent2">F9DC5C</td>
+          <td class="accent2">#F9DC5C</td>
         </tr>
       </table>
 
@@ -128,9 +128,9 @@
         alt="home page wireframe"
       />
 
-      <h3>[Page 2]</h3>
+      <h3>Rates/Dates</h3>
 
-      <!-- <img src="#" alt="page 2 wireframe"> -->
+      <img src="images/P2 Wireframe.jpg" alt="page 2 wireframe" /> -->
     </main>
   </body>
 </html>
