--- a/tetonpartyco/site-plan.html
+++ b/tetonpartyco/site-plan.html
@@ -118,29 +118,32 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        Welcome to Teton Party Co! Let's plan a party!
+        Welcome to Teton Party Co! We love to plan parties and give that extra "wow" factor with our customized balloon decor!
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="tetonpartyco/image.jpg" alt="Kay owner of Teton Party Co.">
+        <img src="images/Barber.jpg" alt="Balloon arch over Barberpop Shop">
+      
+          <img src="images/kay.jpg" alt="Kay owner of Teton Party Co.">
+       
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Projects</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Want to see some of our work? Look no further. Here we have compilied some recent projects along with reviews!
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/dr.jpg" alt="Dr Suess themed balloon arch">
+        <img src="images/jack.jpg" alt="Balloon decor">
+        <img src="images/bridal.jpg" alt="Balloon Decor">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>FAQs</h3>
       <p>
-        [Written copy for the Page 3 here]
+        If you have any questions feel free to reach out! Here are some requently asked questions, we have done our best to answer them clearly, but if for any reason you need help reach out via Instagram, or email!
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/Plane Icon.jpg" alt="plane icon">
+        <img src="images/Contact Icon.jpg" alt="Contact icon">
 
       </ul>
       <hr>
@@ -156,13 +159,13 @@
       </p>
       <img src="#" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Projects</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
       <img src="#" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>FAQs</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
