--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <a href="rafting/index.html">Dry Oar Boating Website</a>
       <a href="w02/site-plan-rafting.html">White Water Rafting Siteplan</a>
       <a href="positioning.html">Positioning Activity</a>
-      <a href="#">Personal Website</a>
-      <a href="#">Personal Siteplan</a>
+      <a href="tetonpartyco/index.html">Personal Website</a>
+      <a href="tetonpartyco/site-plan.html">Personal Siteplan</a>
     </nav>
   </body>
 </html>
