--- a/tetonpartyco/site-plan.html
+++ b/tetonpartyco/site-plan.html
@@ -53,8 +53,6 @@
       <h3>
         Typography
       </h3>
-      <!-- What font(s) have you chosen? Why did you choose what you did?-->
-
       <h4>
         Heading Font: Amatic SC Regular, PT Serif, Lato
       </h4>
@@ -154,22 +152,19 @@
         Create three wireframes for your site. One for each page and list them here</p>
 
       <h3>Home</h3>
-      <p>         
-        [Any additional details about home that the wireframe does not make clear]
-      </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/w1.jpeg" alt="home page wireframe">
 
       <h3>Projects</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/w2.jpeg" alt="page 2 wireframe">
 
       <h3>FAQs</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/w3.jpeg" alt="page 3 wireframe">
     </main>
   </body>
 
