--- a/rafting/index.html
+++ b/rafting/index.html
@@ -15,7 +15,7 @@
         </a>
         <nav>
           <a href="index.html">Home</a>
-          <a href="#">Page 2</a>
+          <a href="rates.html">Rates/Dates</a>
           <a href="site-plan-rafting.html">Site Plan</a>
           <a href="contactus.html">Contact Us</a>
         </nav>
@@ -31,9 +31,8 @@
         <section id="hero-msg">
           <h1 class="home-title">Have An Adventure</h1>
           <h4 class="h4">Make Memories with Dry Oar</h4>
-          <div class="button-box">
-            <a class="book" href="rates.html">Book Now</a>
-          </div>
+
+          <a class="book" href="rates.html">Book Now</a>
         </section>
       </div>
       <main class="home-grid">
