raft site attempt

--- a/rafting/rates.html
+++ b/rafting/rates.html
@@ -31,7 +31,7 @@
             </nav>
           </header>
           <main class="rate-grid">
-            <h6 class="h6">Rates/Dates for the 2022 Season</h6>
+            <h6 class="ratesheader">Rates/Dates for the 2022 Season</h6>
             <div class="gcthree">
               <img
                 class="img-background"
@@ -39,7 +39,7 @@
                 alt="Grand Canyon River"
               />
               <h1 class="h2">Grand Canyon 3 Night Trip</h1>
-              <p>
+              <p class="gcthree-info">
                 CLASS I - X: The Grand Canyon uses a unique river rating scale.
                 The rapids in the Canyon are technically rated I- A(1 - I0) to
                 accommodate such a wide variety of rapids and river varl- ances.
@@ -62,7 +62,7 @@
                 alt="Grand Canyon River"
               />
               <h2 class="h2">Grand Canyon 6 Night Trip</h2>
-              <p>
+              <p class="gcsix-info">
                 CLASS I - X: The Grand Canyon uses a unique river rating scale.
                 The rapids in the Canyon are technically rated 1-10 to
                 accommodate such a wide variety of ravids and river vari. ances.
