updated siteplan html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <nav>
       <a href="aboutme/index.html">About Me Page</a>
       <a href="rafting/index.html">Dry Oar Boating Website</a>
-      <a href="w02/site-plan-rafting.html">White Water Rafting Siteplan</a>
+      <a href="rafting/rafting siteplan/rafting-plan.html"
+        >White Water Rafting Siteplan</a
+      >
       <a href="positioning.html">Positioning Activity</a>
       <a href="tetonpartyco/index.html">Personal Website</a>
       <a href="tetonpartyco/site-plan.html">Personal Siteplan</a>
