--- a/tetonpartyco/reviews.html
+++ b/tetonpartyco/reviews.html
@@ -21,12 +21,14 @@
       </nav>
     </header>
     <main>
-    <h2>Welcome to Teton Party Co! We love to plan parties and give that extra "wow" factor with our customized balloon decor!</h2>
-    <img src="images/Barber.jpg" alt="Red and blue balloons for Barber Shop" />
-    <div id="home_review">
-      <h1>Review</h1>
-      <p>I cannot say enough about Kay! She was easy to work with, quick to respond, and you could tell she loves what she does. I have worked with a lot of vendors due to my profession and you want people like Kay working with you! Book her for your next event. Thank me later!</p>
-    </div>
+        <h1>Reviews</h1>
+        <h2>Want to see some of our work? Look no further. Here we have compilied some recent projects along with reviews!</h2>
+        <img src="images/dr.jpg" alt="Dr Suess themed balloon arch" />
+        <p> "We got a balloon arch done for Dr Suess week at our school and it turned out AMAZING! It looked so beautiful! Kayana is super professional and puts pride in her work! She is the best!"</p>
+    <img src="images/jack.jpg" alt="Construction themed balloon arch" />
+    <p>"Kayana put together a balloon arch for my little boys first birthday. I gave her and theme and she found the most perfect colors! Her arch was the perfect backdrop for the party!"</p>
+    <img src="images/bridal.jpg" alt="Bridal Party Balloon Arch" />
+    <p>"I loved my my balloon arch for my bridal shower. It turned out amazing and held up great!! Kay is very talented!"</p>
 </main>
     <footer>
       <img src="images/kay.jpg" alt="Kay, owner of Teton Party Co." />
