--- a/tetonpartyco/site-plan.html
+++ b/tetonpartyco/site-plan.html
@@ -79,8 +79,9 @@
       </h3>
       <nav>
         <a href="#">Home</a>
-        <a href="#">Projects</a>
-        <a href="#">FAQ</a>
+        <a href="#">Reviews</a>
+        <a href="#">Pricing</a>
+        <a href="#">Policies</a>
       </nav>
       <hr>
       <h2>
