--- a/tetonpartyco/index.html
+++ b/tetonpartyco/index.html
@@ -42,5 +42,6 @@
       <a target="_blank" href="https://instagram.com">
         <img src="images/instagram.png" alt="instagram icon" />
     </footer>
+    <a href="site-plan.html">Siteplan</a>
   </body>
 </html>
