--- a/tetonpartyco/index.html
+++ b/tetonpartyco/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homepage</title>
-    <link rel="stylesheet" href="styles/style.css" />
+    <title>Teton Party Co Homepage</title>
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
+    <div id="content">
     <header>
       <a id="logo_link" href="index.html">
-        <img src="images/TetonPartyCo.png" alt="Teton Party Co Logo" />
+        <img class="logo" src="images/TetonPartyCo.png" alt="Teton Party Co Logo" />
       </a>
+      <h1 class="home-title">Teton Party Co.</h1>
       <nav>
         <a href="index.html">Home</a>
         <a href="reviews.html">Reviews</a>
@@ -21,16 +23,19 @@
       </nav>
     </header>
     <main>
-    <h2>Welcome to Teton Party Co! We love to plan parties and give that extra "wow" factor with our customized balloon decor!</h2>
-    <img src="images/Barber.jpg" alt="Red and blue balloons for Barber Shop" />
-    <div id="home_review">
-      <h1>Review</h1>
-      <p>I cannot say enough about Kay! She was easy to work with, quick to respond, and you could tell she loves what she does. I have worked with a lot of vendors due to my profession and you want people like Kay working with you! Book her for your next event. Thank me later!</p>
+        <div id="hero">
+    <h2 id="welcome">Welcome to Teton Party Co! We love to plan parties and give that extra "wow" factor with our customized balloon decor!</h2>
+    <img id="hero-img" src="images/Barber.jpg" alt="Red and blue balloons for Barber Shop" />
+</div>
+    <div class="review">
+      <h2>Review</h2>
+      <p>"I cannot say enough about Kay! She was easy to work with, quick to respond, and you could tell she loves what she does. I have worked with a lot of vendors due to my profession and you want people like Kay working with you! Book her for your next event. Thank me later!"</p>
     </div>
 </main>
     <footer>
-      <img src="images/kay.jpg" alt="Kay, owner of Teton Party Co." />
-      <p>
+        <div id="aboutme">
+      <img class="profile" src="images/kay.jpg" alt="Kay, owner of Teton Party Co." />
+      <p class="bio">
         Hi, I am Kayana! Owner and creator at Teton Party Co. I love parties and
         how they bring people together to celebrate. I have always enjoyed
         creating beautiful spaces for people to gather in, especially themed
@@ -38,6 +43,7 @@
         décor that is the perfect touch to any gathering! Thanks for checking
         things out, I hope to hear from you soon!
       </p>
+    </div>
       <p>Teton Party Co. &copy; 2022 - TayLynn Harman</p>
       <a target="_blank" href="https://instagram.com">
         <img src="images/instagram.png" alt="instagram icon" />
