--- a/tetonpartyco/index.html
+++ b/tetonpartyco/index.html
@@ -11,7 +11,7 @@
     <div id="content">
     <header>
       <a id="logo_link" href="index.html">
-        <img class="logo" src="images/TetonPartyCo.png" alt="Teton Party Co Logo" />
+        <img class="logo" src="images/TPC.png" alt="Teton Party Co Logo" />
       </a>
       <h1 class="home-title">Teton Party Co.</h1>
       <nav>
@@ -46,8 +46,8 @@
     </div>
       <p>Teton Party Co. &copy; 2022 - TayLynn Harman</p>
       <a target="_blank" href="https://instagram.com">
+        <a href="site-plan.html">Siteplan</a>
         <img src="images/instagram.png" alt="instagram icon" />
     </footer>
-    <a href="site-plan.html">Siteplan</a>
   </body>
 </html>
