--- a/tetonpartyco/faq.html
+++ b/tetonpartyco/faq.html
@@ -9,16 +9,19 @@
   </head>
   <body>
     <header>
-      <a id="logo_link" href="index.html">
-        <img src="images/TetonPartyCo.png" alt="Teton Party Co Logo" />
-      </a>
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="reviews.html">Reviews</a>
-        <a href="#">Pricing</a>
-        <a href="faq.html">FAQS</a>
-        <a href="#">Policies</a>
-      </nav>
+      <div id="content">
+        <header>
+          <a id="logo_link" href="index.html">
+            <img class="logo" src="images/TPC.png" alt="Teton Party Co Logo" />
+          </a>
+          <h1 class="home-title">Teton Party Co.</h1>
+          <nav>
+            <a href="index.html">Home</a>
+            <a href="reviews.html">Reviews</a>
+            <a href="#">Pricing</a>
+            <a href="faq.html">FAQS</a>
+            <a href="#">Policies</a>
+          </nav>
     </header>
     <main>
         <h1>FAQS</h1>
@@ -40,18 +43,21 @@
    
 </main>
     <footer>
-      <img src="images/kay.jpg" alt="Kay, owner of Teton Party Co." />
-      <p>
-        Hi, I am Kayana! Owner and creator at Teton Party Co. I love parties and
-        how they bring people together to celebrate. I have always enjoyed
-        creating beautiful spaces for people to gather in, especially themed
-        celebrations. Just over the last year I have started creating balloon
-        décor that is the perfect touch to any gathering! Thanks for checking
-        things out, I hope to hear from you soon!
-      </p>
-      <p>Teton Party Co. &copy; 2022 - TayLynn Harman</p>
-      <a target="_blank" href="https://instagram.com">
-        <img src="images/instagram.png" alt="instagram icon" />
+      <div id="aboutme">
+        <img class="profile" src="images/kay.jpg" alt="Kay, owner of Teton Party Co." />
+        <p class="bio">
+          Hi, I am Kayana! Owner and creator at Teton Party Co. I love parties and
+          how they bring people together to celebrate. I have always enjoyed
+          creating beautiful spaces for people to gather in, especially themed
+          celebrations. Just over the last year I have started creating balloon
+          décor that is the perfect touch to any gathering! Thanks for checking
+          things out, I hope to hear from you soon!
+        </p>
+      </div>
+        <p>Teton Party Co. &copy; 2022 - TayLynn Harman</p>
+        <a target="_blank" href="https://instagram.com">
+          <a href="site-plan.html">Siteplan</a>
+          <img src="images/instagram.png" alt="instagram icon" />
       </footer>
   </body>
 </html>
