--- a/tetonpartyco/index.html
+++ b/tetonpartyco/index.html
@@ -19,7 +19,13 @@
         <a href="reviews.html">Reviews</a>
         <a href="#">Pricing</a>
         <a href="faq.html">FAQS</a>
-        <a href="#">Policies</a>
+        <div class="dropdown">
+          <button class="dropbtn">Policies</button>
+          <div class="dropdown-content">
+            <a href="#">Privacy</a>
+            <a href="#">Returns</a>
+          </div>
+        </div>
       </nav>
     </header>
     <main>
