--- a/tetonpartyco/faq.html
+++ b/tetonpartyco/faq.html
@@ -5,24 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FAQS</title>
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
-    <header>
-      <div id="content">
-        <header>
-          <a id="logo_link" href="index.html">
-            <img class="logo" src="images/TPC.png" alt="Teton Party Co Logo" />
-          </a>
-          <h1 class="home-title">Teton Party Co.</h1>
-          <nav>
-            <a href="index.html">Home</a>
-            <a href="reviews.html">Reviews</a>
-            <a href="#">Pricing</a>
-            <a href="faq.html">FAQS</a>
-            <a href="#">Policies</a>
-          </nav>
-    </header>
+    <div id="content">
+      <header>
+        <a id="logo_link" href="index.html">
+          <img class="logo" src="images/TPC.png" alt="Teton Party Co Logo" />
+        </a>
+        <h1 class="home-title">Teton Party Co.</h1>
+        <nav>
+          <a href="index.html">Home</a>
+          <a href="reviews.html">Reviews</a>
+          <a href="#">Pricing</a>
+          <a href="faq.html">FAQS</a>
+          <div class="dropdown">
+            <button class="dropbtn">Policies</button>
+            <div class="dropdown-content">
+              <a href="#">Privacy</a>
+              <a href="#">Returns</a>
+            </div>
+          </div>
+        </nav>
+      </header>
     <main>
         <h1>FAQS</h1>
         <h2>If you have any questions feel free to reach out! Here are some requently asked questions, we have done our best to answer them clearly, but if for any reason you need help reach out via Instagram, or email!</h2>
