--- a/tetonpartyco/reviews.html
+++ b/tetonpartyco/reviews.html
@@ -8,21 +8,26 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <header>
-      <div id="content">
-        <header>
-          <a id="logo_link" href="index.html">
-            <img class="logo" src="images/TPC.png" alt="Teton Party Co Logo" />
-          </a>
-          <h1 class="home-title">Teton Party Co.</h1>
-          <nav>
-            <a href="index.html">Home</a>
-            <a href="reviews.html">Reviews</a>
-            <a href="#">Pricing</a>
-            <a href="faq.html">FAQS</a>
-            <a href="#">Policies</a>
-          </nav>
-    </header>
+    <div id="content">
+      <header>
+        <a id="logo_link" href="index.html">
+          <img class="logo" src="images/TPC.png" alt="Teton Party Co Logo" />
+        </a>
+        <h1 class="home-title">Teton Party Co.</h1>
+        <nav>
+          <a href="index.html">Home</a>
+          <a href="reviews.html">Reviews</a>
+          <a href="#">Pricing</a>
+          <a href="faq.html">FAQS</a>
+          <div class="dropdown">
+            <button class="dropbtn">Policies</button>
+            <div class="dropdown-content">
+              <a href="#">Privacy</a>
+              <a href="#">Returns</a>
+            </div>
+          </div>
+        </nav>
+      </header>
     <main>
         <h1>Reviews</h1>
         <h2>Want to see some of our work? Look no further. Here we have compilied some recent projects along with reviews!</h2>
