--- a/tetonpartyco/reviews.html
+++ b/tetonpartyco/reviews.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reviews</title>
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
     <div id="content">
@@ -13,7 +13,8 @@
         <a id="logo_link" href="index.html">
           <img class="logo" src="images/TPC.png" alt="Teton Party Co Logo" />
         </a>
-        <h1 class="home-title">Teton Party Co.</h1>
+        <div class="navhead">
+        <div class="home-title">Teton Party Co.</div>
         <nav>
           <a href="index.html">Home</a>
           <a href="reviews.html">Reviews</a>
@@ -27,33 +28,41 @@
             </div>
           </div>
         </nav>
+      </div>
+      <div class="offset"></div>
       </header>
     <main>
         <h1>Reviews</h1>
-        <h2>Want to see some of our work? Look no further. Here we have compilied some recent projects along with reviews!</h2>
+        <div class="review-header">Want to see some of our work? Look no further. Here we have compilied some recent projects along with reviews!</div>
+        <div class="photos">
         <img src="images/dr.jpg" alt="Dr Suess themed balloon arch" />
-        <p> "We got a balloon arch done for Dr Suess week at our school and it turned out AMAZING! It looked so beautiful! Kayana is super professional and puts pride in her work! She is the best!"</p>
-    <img src="images/jack.jpg" alt="Construction themed balloon arch" />
-    <p>"Kayana put together a balloon arch for my little boys first birthday. I gave her and theme and she found the most perfect colors! Her arch was the perfect backdrop for the party!"</p>
-    <img src="images/bridal.jpg" alt="Bridal Party Balloon Arch" />
-    <p>"I loved my my balloon arch for my bridal shower. It turned out amazing and held up great!! Kay is very talented!"</p>
+          <img src="images/jack.jpg" alt="Construction themed balloon arch" />
+          <img src="images/bridal.jpg" alt="Bridal Party Balloon Arch" />
+          </div>
+
+<div class="reviews">
+        <p class="rpara"> "We got a balloon arch done for Dr Suess week at our school and it turned out AMAZING! It looked so beautiful! Kayana is super professional and puts pride in her work! She is the best!"</p>
+    <p class="rpara">"Kayana put together a balloon arch for my little boys first birthday. I gave her and theme and she found the most perfect colors! Her arch was the perfect backdrop for the party!"</p>
+    <p class="rpara">"I loved my my balloon arch for my bridal shower. It turned out amazing and held up great!! Kay is very talented!"</p>
+</div>
 </main>
-    <footer>
-      <div id="aboutme">
-        <img class="profile" src="images/kay.jpg" alt="Kay, owner of Teton Party Co." />
-        <p class="bio">
-          Hi, I am Kayana! Owner and creator at Teton Party Co. I love parties and
-          how they bring people together to celebrate. I have always enjoyed
-          creating beautiful spaces for people to gather in, especially themed
-          celebrations. Just over the last year I have started creating balloon
-          décor that is the perfect touch to any gathering! Thanks for checking
-          things out, I hope to hear from you soon!
-        </p>
-      </div>
-        <p>Teton Party Co. &copy; 2022 - TayLynn Harman</p>
-        <a target="_blank" href="https://instagram.com">
-          <a href="site-plan.html">Siteplan</a>
-          <img src="images/instagram.png" alt="instagram icon" />
-    </footer>
-  </body>
+  <footer>
+  <div class="aboutme">
+    <img class="profile" src="images/kay.jpg" alt="Kay, owner of Teton Party Co." />
+    <p>
+      Hi, I am Kayana! Owner and creator at Teton Party Co. I love parties and
+      how they bring people together to celebrate. I have always enjoyed
+      creating beautiful spaces for people to gather in, especially themed
+      celebrations. Just over the last year I have started creating balloon
+      décor that is the perfect touch to any gathering! Thanks for checking
+      things out, I hope to hear from you soon!
+    </p>
+  </div>
+    <p>Teton Party Co. &copy; 2022 - TayLynn Harman</p>
+    <a target="_blank" href="https://instagram.com">
+      <a href="site-plan.html">Siteplan</a>
+      <img src="images/instagram.png" alt="instagram icon" />
+  </footer>
+</body>
 </html>
+
