--- a/tetonpartyco/faq.html
+++ b/tetonpartyco/faq.html
@@ -13,7 +13,8 @@
         <a id="logo_link" href="index.html">
           <img class="logo" src="images/TPC.png" alt="Teton Party Co Logo" />
         </a>
-        <h1 class="home-title">Teton Party Co.</h1>
+        <div class="navhead">
+        <div class="home-title">Teton Party Co.</div>
         <nav>
           <a href="index.html">Home</a>
           <a href="reviews.html">Reviews</a>
@@ -27,6 +28,8 @@
             </div>
           </div>
         </nav>
+      </div>
+      <div class="offset"></div>
       </header>
     <main>
         <h1>FAQS</h1>
