--- a/tetonpartyco/index.html
+++ b/tetonpartyco/index.html
@@ -13,7 +13,8 @@
       <a id="logo_link" href="index.html">
         <img class="logo" src="images/TPC.png" alt="Teton Party Co Logo" />
       </a>
-      <h1 class="home-title">Teton Party Co.</h1>
+      <div class="navhead">
+      <div class="home-title">Teton Party Co.</div>
       <nav>
         <a href="index.html">Home</a>
         <a href="reviews.html">Reviews</a>
@@ -27,21 +28,23 @@
           </div>
         </div>
       </nav>
+    </div>
+    <div class="offset"></div>
     </header>
     <main>
-        <div id="hero">
-    <h2 id="welcome">Welcome to Teton Party Co! We love to plan parties and give that extra "wow" factor with our customized balloon decor!</h2>
-    <img id="hero-img" src="images/Barber.jpg" alt="Red and blue balloons for Barber Shop" />
-</div>
+      <div class="homemain">
+    <div class="welcome">Welcome to Teton Party Co, where we love to plan parties and give that extra "wow" factor with our customized balloon decor!</div>
+    <img class="hero" src="images/Barber.jpg" alt="Red and blue balloons for Barber Shop" />
     <div class="review">
       <h2>Review</h2>
-      <p>"I cannot say enough about Kay! She was easy to work with, quick to respond, and you could tell she loves what she does. I have worked with a lot of vendors due to my profession and you want people like Kay working with you! Book her for your next event. Thank me later!"</p>
+      <p class="revp">"I cannot say enough about Kay! She was easy to work with, quick to respond, and you could tell she loves what she does. I have worked with a lot of vendors due to my profession and you want people like Kay working with you! Book her for your next event. Thank me later!"</p>
     </div>
+  </div>
 </main>
     <footer>
-        <div id="aboutme">
+      <div class="footer">
       <img class="profile" src="images/kay.jpg" alt="Kay, owner of Teton Party Co." />
-      <p class="bio">
+      <p id="bio">
         Hi, I am Kayana! Owner and creator at Teton Party Co. I love parties and
         how they bring people together to celebrate. I have always enjoyed
         creating beautiful spaces for people to gather in, especially themed
@@ -54,6 +57,7 @@
       <a target="_blank" href="https://instagram.com">
         <a href="site-plan.html">Siteplan</a>
         <img src="images/instagram.png" alt="instagram icon" />
+      </div>
     </footer>
   </body>
 </html>
