--- a/tetonpartyco/reviews.html
+++ b/tetonpartyco/reviews.html
@@ -32,8 +32,7 @@
       <div class="offset"></div>
       </header>
     <main>
-        <h1>Reviews</h1>
-        <div class="review-header">Want to see some of our work? Look no further. Here we have compilied some recent projects along with reviews!</div>
+        <div class="welcome">Want to see some of our work? Look no further. Here we have compilied some recent projects along with reviews!</div>
         <div class="photos">
         <img src="images/dr.jpg" alt="Dr Suess themed balloon arch" />
           <img src="images/jack.jpg" alt="Construction themed balloon arch" />
@@ -42,14 +41,14 @@
 
 <div class="reviews">
         <p class="rpara"> "We got a balloon arch done for Dr Suess week at our school and it turned out AMAZING! It looked so beautiful! Kayana is super professional and puts pride in her work! She is the best!"</p>
-    <p class="rpara">"Kayana put together a balloon arch for my little boys first birthday. I gave her and theme and she found the most perfect colors! Her arch was the perfect backdrop for the party!"</p>
+    <p class="rpara">"Kayana put together a balloon arch for my little boys first birthday. I gave her a theme and she found the most perfect colors! Her arch was the perfect backdrop for the party!"</p>
     <p class="rpara">"I loved my my balloon arch for my bridal shower. It turned out amazing and held up great!! Kay is very talented!"</p>
 </div>
 </main>
-  <footer>
-  <div class="aboutme">
+<footer>
+  <div class="footgrid">
     <img class="profile" src="images/kay.jpg" alt="Kay, owner of Teton Party Co." />
-    <p>
+    <p class="aboutme">
       Hi, I am Kayana! Owner and creator at Teton Party Co. I love parties and
       how they bring people together to celebrate. I have always enjoyed
       creating beautiful spaces for people to gather in, especially themed
@@ -57,12 +56,14 @@
       décor that is the perfect touch to any gathering! Thanks for checking
       things out, I hope to hear from you soon!
     </p>
-  </div>
-    <p>Teton Party Co. &copy; 2022 - TayLynn Harman</p>
-    <a target="_blank" href="https://instagram.com">
-      <a href="site-plan.html">Siteplan</a>
+    <p class="copyright">Teton Party Co. &copy; 2022 - TayLynn Harman</p>
+      <a class="site" href="site-plan.html">Siteplan</a>
+      <div class="insta">
+      <a target="_blank" href="https://www.instagram.com/">Instagram</a>
       <img src="images/instagram.png" alt="instagram icon" />
+    </div>
+    </div>
   </footer>
-</body>
+  </body>
 </html>
 
