--- a/tetonpartyco/index.html
+++ b/tetonpartyco/index.html
@@ -34,30 +34,31 @@
     <main>
       <div class="homemain">
     <div class="welcome">Welcome to Teton Party Co, where we love to plan parties and give that extra "wow" factor with our customized balloon decor!</div>
+    <div class="herogrid">
     <img class="hero" src="images/Barber.jpg" alt="Red and blue balloons for Barber Shop" />
-    <div class="review">
-      <h2>Review</h2>
+    <div class="revback"></div>
       <p class="revp">"I cannot say enough about Kay! She was easy to work with, quick to respond, and you could tell she loves what she does. I have worked with a lot of vendors due to my profession and you want people like Kay working with you! Book her for your next event. Thank me later!"</p>
     </div>
   </div>
 </main>
-    <footer>
-      <div class="footer">
-      <img class="profile" src="images/kay.jpg" alt="Kay, owner of Teton Party Co." />
-      <p id="bio">
-        Hi, I am Kayana! Owner and creator at Teton Party Co. I love parties and
-        how they bring people together to celebrate. I have always enjoyed
-        creating beautiful spaces for people to gather in, especially themed
-        celebrations. Just over the last year I have started creating balloon
-        décor that is the perfect touch to any gathering! Thanks for checking
-        things out, I hope to hear from you soon!
-      </p>
+<footer>
+  <div class="footgrid">
+    <img class="profile" src="images/kay.jpg" alt="Kay, owner of Teton Party Co." />
+    <p class="aboutme">
+      Hi, I am Kayana! Owner and creator at Teton Party Co. I love parties and
+      how they bring people together to celebrate. I have always enjoyed
+      creating beautiful spaces for people to gather in, especially themed
+      celebrations. Just over the last year I have started creating balloon
+      décor that is the perfect touch to any gathering! Thanks for checking
+      things out, I hope to hear from you soon!
+    </p>
+    <p class="copyright">Teton Party Co. &copy; 2022 - TayLynn Harman</p>
+      <a class="site" href="site-plan.html">Siteplan</a>
+      <div class="insta">
+      <a target="_blank" href="https://www.instagram.com/"></a>
+      <img src="images/instagram.png" alt="instagram icon" />
     </div>
-      <p>Teton Party Co. &copy; 2022 - TayLynn Harman</p>
-      <a target="_blank" href="https://instagram.com">
-        <a href="site-plan.html">Siteplan</a>
-        <img src="images/instagram.png" alt="instagram icon" />
-      </div>
-    </footer>
+    </div>
+  </footer>
   </body>
 </html>
