--- a/tetonpartyco/faq.html
+++ b/tetonpartyco/faq.html
@@ -1,19 +1,19 @@
-  <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>FAQS</title>
-      <link rel="stylesheet" href="styles/styles.css" />
-    </head>
-    <body>
-      <div id="content">
-        <header>
-          <a id="logo_link" href="index.html">
-            <img class="logo" src="images/TPC.png" alt="Teton Party Co Logo" />
-          </a>
-          <div class="navhead">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>FAQS</title>
+    <link rel="stylesheet" href="styles/styles.css" />
+  </head>
+  <body>
+    <div id="content">
+      <header>
+        <a id="logo_link" href="index.html">
+          <img class="logo" src="images/TPC.png" alt="Teton Party Co Logo" />
+        </a>
+        <div class="navhead">
           <div class="home-title">Teton Party Co.</div>
           <nav>
             <a href="index.html">Home</a>
@@ -30,40 +30,86 @@
           </nav>
         </div>
         <div class="offset"></div>
-        </header>
+      </header>
       <main>
-          <h2 class="welcome">If you have any questions feel free to reach out! Here are some requently asked questions, we have done our best to answer them clearly, but if for any reason you need help reach out via Instagram, or email!</h2>
-          <div class="faqgrid">
+        <h2 class="welcome">
+          If you have any questions feel free to reach out! Here are some
+          requently asked questions, we have done our best to answer them
+          clearly, but if for any reason you need help reach out via Instagram,
+          or email!
+        </h2>
+        <div class="faqgrid">
           <img class="icon" src="images/plane icon.jpg" alt="Plane Icon" />
           <div class="color">
-          <p> Q: How far are you willing to travel?</p>
-          <p>A: We gladly cover all of Southeast Idaho! However, due to distance, fees may apply for events outside of Madison, Fremont, Jefferson, and Teton Counties. If this applies to you, please send us a DM and we can discuss further details.</p>
+            <p>Q: How far are you willing to travel?</p>
+            <p>
+              A: We gladly cover all of Southeast Idaho! However, due to
+              distance, fees may apply for events outside of Madison, Fremont,
+              Jefferson, and Teton Counties. If this applies to you, please send
+              us a DM and we can discuss further details.
+            </p>
           </div>
           <img class="icon" src="images/time.png" alt="Time Icon" />
-          <div class="color">  
-      <p>Q:How long do your balloon garlands last?</p>
-      <p>A: We use only high-quality, name brand balloons that are made to last!! Ideally, your garland should last at least a week so you can continue to enjoy it even after your event has come to an end! However, when balloons are exposed to moderate heat/cold, direct sunlight, harsh winds, sharp objects, extensive touching, etc., they are known to deflate more quickly We will do everything we can to ensure your balloon masterpiece is good to go for as long as possible, but we are not responsible for what happens to them after we finish the install and leave the premises. This is out of our control.</p>
-  </div>
-  <img class="icon" src="images/Contact Icon.jpg" alt="Contact Icon" />
-      <div class="color"> 
-          <p>Q: How far in advance do I need to book my event?</p>
-          <p>A: Custom color garlands must be booked a minimum of 10 days prior to the event, due to shipping time. We order our balloons from a professional wholesale supplier. Unfortunately, there are no places locally to purchase high quality balloons, which makes it difficult to book events requiring custom colors on short notice. Eventually I hope to increase my inventory and have a variety of colors on hand, but for now 10 day’s notice is required for all custom bookings. For events less than 10 days away, please message me and I can let you know what colors I currently have on hand. How do I book an event with you? To book with us, please send us a message or email! We will discuss the style, colors, etc. you have in mind for the day of your event. Once date is confirmed and booking deposit is paid you’re booked! 50% of total cost is required at booking. This covers the cost of balloons and other supplies, as well as secures you a spot on my calendar!</p>
-      </div>
-  </main>
-  <footer>
-    <div class="footgrid">
-      <img class="profile" src="images/kay.jpg" alt="Kay, owner of Teton Party Co." />
-      <p class="aboutme">
-        Hi, I am Kayana! Owner and creator at Teton Party Co. I love parties and
-        how they bring people together to celebrate. I have always enjoyed
-        creating beautiful spaces for people to gather in, especially themed
-        celebrations. Just over the last year I have started creating balloon
-        décor that is the perfect touch to any gathering! Thanks for checking
-        things out, I hope to hear from you soon!
-      </p>
-      <p class="copyright">Teton Party Co. &copy; 2022 - TayLynn Harman</p>
-      <a class="insta" target="_blank" href="https://instagram.com">
-        <a class="site" href="site-plan.html">Siteplan</a>
-        <img class="insta" src="images/instagram.png" alt="instagram icon" />
-      </div>
-    </footer>
+          <div class="color">
+            <p>Q:How long do your balloon garlands last?</p>
+            <p>
+              A: We use only high-quality, name brand balloons that are made to
+              last!! Ideally, your garland should last at least a week so you
+              can continue to enjoy it even after your event has come to an end!
+              However, when balloons are exposed to moderate heat/cold, direct
+              sunlight, harsh winds, sharp objects, extensive touching, etc.,
+              they are known to deflate more quickly We will do everything we
+              can to ensure your balloon masterpiece is good to go for as long
+              as possible, but we are not responsible for what happens to them
+              after we finish the install and leave the premises. This is out of
+              our control.
+            </p>
+          </div>
+          <img class="icon" src="images/Contact Icon.jpg" alt="Contact Icon" />
+          <div class="color">
+            <p>Q: How far in advance do I need to book my event?</p>
+            <p>
+              A: Custom color garlands must be booked a minimum of 10 days prior
+              to the event, due to shipping time. We order our balloons from a
+              professional wholesale supplier. Unfortunately, there are no
+              places locally to purchase high quality balloons, which makes it
+              difficult to book events requiring custom colors on short notice.
+              Eventually I hope to increase my inventory and have a variety of
+              colors on hand, but for now 10 day’s notice is required for all
+              custom bookings. For events less than 10 days away, please message
+              me and I can let you know what colors I currently have on hand.
+              How do I book an event with you? To book with us, please send us a
+              message or email! We will discuss the style, colors, etc. you have
+              in mind for the day of your event. Once date is confirmed and
+              booking deposit is paid you’re booked! 50% of total cost is
+              required at booking. This covers the cost of balloons and other
+              supplies, as well as secures you a spot on my calendar!
+            </p>
+          </div>
+        </div>
+      </main>
+      <footer>
+        <div class="footgrid">
+          <img
+            class="profile"
+            src="images/kay.jpg"
+            alt="Kay, owner of Teton Party Co."
+          />
+          <p class="aboutme">
+            Hi, I am Kayana! Owner and creator at Teton Party Co. I love parties
+            and how they bring people together to celebrate. I have always
+            enjoyed creating beautiful spaces for people to gather in,
+            especially themed celebrations. Just over the last year I have
+            started creating balloon décor that is the perfect touch to any
+            gathering! Thanks for checking things out, I hope to hear from you
+            soon!
+          </p>
+          <p class="copyright">Teton Party Co. &copy; 2022 - TayLynn Harman</p>
+          <a class="insta" target="_blank" href="https://instagram.com"></a>
+          <a class="site" href="site-plan.html">Siteplan</a>
+          <img class="insta" src="images/instagram.png" alt="instagram icon" />
+        </div>
+      </footer>
+    </div>
+  </body>
+</html>
