--- a/tetonpartyco/reviews.html
+++ b/tetonpartyco/reviews.html
@@ -14,56 +14,75 @@
           <img class="logo" src="images/TPC.png" alt="Teton Party Co Logo" />
         </a>
         <div class="navhead">
-        <div class="home-title">Teton Party Co.</div>
-        <nav>
-          <a href="index.html">Home</a>
-          <a href="reviews.html">Reviews</a>
-          <a href="#">Pricing</a>
-          <a href="faq.html">FAQS</a>
-          <div class="dropdown">
-            <button class="dropbtn">Policies</button>
-            <div class="dropdown-content">
-              <a href="#">Privacy</a>
-              <a href="#">Returns</a>
+          <div class="home-title">Teton Party Co.</div>
+          <nav>
+            <a href="index.html">Home</a>
+            <a href="reviews.html">Reviews</a>
+            <a href="#">Pricing</a>
+            <a href="faq.html">FAQS</a>
+            <div class="dropdown">
+              <button class="dropbtn">Policies</button>
+              <div class="dropdown-content">
+                <a href="#">Privacy</a>
+                <a href="#">Returns</a>
+              </div>
             </div>
-          </div>
-        </nav>
-      </div>
-      <div class="offset"></div>
+          </nav>
+        </div>
+        <div class="offset"></div>
       </header>
-    <main>
-        <div class="welcome">Want to see some of our work? Look no further. Here we have compilied some recent projects along with reviews!</div>
+      <main>
+        <div class="welcome">
+          Want to see some of our work? Look no further. Here we have compilied
+          some recent projects along with reviews!
+        </div>
         <div class="photos">
-        <img src="images/dr.jpg" alt="Dr Suess themed balloon arch" />
+          <img src="images/dr.jpg" alt="Dr Suess themed balloon arch" />
           <img src="images/jack.jpg" alt="Construction themed balloon arch" />
           <img src="images/bridal.jpg" alt="Bridal Party Balloon Arch" />
-          </div>
+        </div>
 
-<div class="reviews">
-        <p class="rpara"> "We got a balloon arch done for Dr Suess week at our school and it turned out AMAZING! It looked so beautiful! Kayana is super professional and puts pride in her work! She is the best!"</p>
-    <p class="rpara">"Kayana put together a balloon arch for my little boys first birthday. I gave her a theme and she found the most perfect colors! Her arch was the perfect backdrop for the party!"</p>
-    <p class="rpara">"I loved my my balloon arch for my bridal shower. It turned out amazing and held up great!! Kay is very talented!"</p>
-</div>
-</main>
-<footer>
-  <div class="footgrid">
-    <img class="profile" src="images/kay.jpg" alt="Kay, owner of Teton Party Co." />
-    <p class="aboutme">
-      Hi, I am Kayana! Owner and creator at Teton Party Co. I love parties and
-      how they bring people together to celebrate. I have always enjoyed
-      creating beautiful spaces for people to gather in, especially themed
-      celebrations. Just over the last year I have started creating balloon
-      décor that is the perfect touch to any gathering! Thanks for checking
-      things out, I hope to hear from you soon!
-    </p>
-    <p class="copyright">Teton Party Co. &copy; 2022 - TayLynn Harman</p>
-      <a class="site" href="site-plan.html">Siteplan</a>
-      <div class="insta">
-      <a target="_blank" href="https://www.instagram.com/">Instagram</a>
-      <img src="images/instagram.png" alt="instagram icon" />
+        <div class="reviews">
+          <p class="rpara">
+            "We got a balloon arch done for Dr Suess week at our school and it
+            turned out AMAZING! It looked so beautiful! Kayana is super
+            professional and puts pride in her work! She is the best!"
+          </p>
+          <p class="rpara">
+            "Kayana put together a balloon arch for my little boys first
+            birthday. I gave her a theme and she found the most perfect colors!
+            Her arch was the perfect backdrop for the party!"
+          </p>
+          <p class="rpara">
+            "I loved my my balloon arch for my bridal shower. It turned out
+            amazing and held up great!! Kay is very talented!"
+          </p>
+        </div>
+      </main>
+      <footer>
+        <div class="footgrid">
+          <img
+            class="profile"
+            src="images/kay.jpg"
+            alt="Kay, owner of Teton Party Co."
+          />
+          <p class="aboutme">
+            Hi, I am Kayana! Owner and creator at Teton Party Co. I love parties
+            and how they bring people together to celebrate. I have always
+            enjoyed creating beautiful spaces for people to gather in,
+            especially themed celebrations. Just over the last year I have
+            started creating balloon décor that is the perfect touch to any
+            gathering! Thanks for checking things out, I hope to hear from you
+            soon!
+          </p>
+          <p class="copyright">Teton Party Co. &copy; 2022 - TayLynn Harman</p>
+          <a class="site" href="site-plan.html">Siteplan</a>
+          <div class="insta">
+            <a target="_blank" href="https://www.instagram.com/">Instagram</a>
+            <img src="images/instagram.png" alt="instagram icon" />
+          </div>
+        </div>
+      </footer>
     </div>
-    </div>
-  </footer>
   </body>
 </html>
-
